  - New Command: /ta purge [days] {townname}
    - Deletes the players from the given town, who haven't logged in in the given days.
    - Closes #5125.
  - Fix /n set capital not checking the correct number for max-residents-per-town.
  - Fix towns and nations being able to use the economy prefixes as town and nation names.
    - Closes #5196.
  - Update list of banned names to include new /town subcommands.
  - Create database.yml file.
    - Your Towny database settings will be migrated to a new database.yml file.
    - This allows us to be shown the config file without mysql servers having to go to the trouble of removing their passwords.
  - Automatic town and nation name renaming for FlatFile database.
    - If a town or nation would be loaded with an invalid name, which would cause Towny to enter into safemode, Towny will rename that town or nation.
    - Solves for the most common sort of SafeMode in modern Towny.
0.97.1.2:
  - Fix database.yml not being converted to the correct loading setting.
0.97.1.3:
  - Placeholder change: %townyadvanced_player_location_pvp% now shows (No PVP) where PVP is disabled.
  - New Placeholder: %townyadvanced_player_location_town_resident_count%
    - If there is a town present where the player stands, it will return the number representing the number of residents that town has.
  - New Placeholder: %townyadvanced_player_location_town_mayor_name%
    - If there is a town present where the player stands, it will return the name of that town's mayor.
  - New Placeholder: %townyadvanced_player_location_town_nation_name%
    - If there is a town present where the player stands, it will return the name of the nation, if the town has one.
  - Language file bumped to 0.118
  - Fix DailyTimerTasks not checking if some lists are empty.
  - Solve potential NPE when residents' jail cells are loaded.
  - Replace deprecated mysql driver.  
  - Fix sending correct helpmessage to ops/admins who log in while safemode is active.